--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 :root {
   font: 16px / 1 sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -8,5 +10,6 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   min-height: 100%;
 }
