--- a/src/styles/spaceStation.scss
+++ b/src/styles/spaceStation.scss
@@ -3,3 +3,20 @@ ul {
   padding: 1rem;
   list-style: none;
 }
+li {
+  // border: 0.2rem;
+  // border-style: dashed;
+  margin: 1rem;
+  padding: 0.2rem;
+}
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+.linkss {
+  color: black;
+}
+.card {
+  margin: 1rem;
+}
