--- a/src/styles/spaceStation.scss
+++ b/src/styles/spaceStation.scss
@@ -20,3 +20,25 @@ img {
 .card {
   margin: 1rem;
 }
+@media (min-width: 768px) {
+  ul {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  .card {
+    min-height: 50rem;
+  }
+  .card_body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1280px) {
+  ul {
+    grid-template-columns: 25% 25% 25% 25%;
+  }
+  .card {
+    height: 50rem;
+  }
+}
