blogs page built, need to fix styling

--- a/src/styles/spaceStation.scss
+++ b/src/styles/spaceStation.scss
@@ -20,6 +20,9 @@ img {
 .card {
   margin: 1rem;
 }
+.btn {
+  color: rgb(202, 153, 119);
+}
 @media (min-width: 768px) {
   ul {
     display: grid;
